--- a/package.json
+++ b/package.json
@@ -16,7 +16,22 @@
   "dependencies": {
     "gatsby": "^3.6.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "antd": "^4.8.6",
+    "gatsby-image": "^2.5.0",
+    "gatsby-plugin-anchor-links": "^1.2.0",
+    "gatsby-plugin-manifest": "^2.6.1",
+    "gatsby-plugin-offline": "^3.4.0",
+    "gatsby-plugin-react-helmet": "^3.4.0",
+    "gatsby-plugin-sass": "^2.6.0",
+    "gatsby-plugin-sharp": "^2.8.0",
+    "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-transformer-sharp": "^2.6.0",
+    "node-sass": "^4.13.0",
+    "prop-types": "^15.7.2",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.1.0",
+    "recharts": "^2.0.8"
   },
   "devDependencies": {
     "prettier": "2.2.1"
